# rs/generated/swagger-ui/swagger.json
@@ -755,12 +755,6 @@
           "required" : false,
           "type" : "string"
         }, {
-          "name" : "avgFraction",
-          "in" : "query",
-          "description" : "平均分",
-          "required" : false,
-          "type" : "number"
-        }, {
           "name" : "pageNumber",
           "in" : "query",
           "description" : "页数",
